# AmbiCreator

./: .gitignore  .gitmodules  AAFoaCreator.jucer  AmbiCreator.jucer  CMakeLists.txt  Changes.txt  README.md
.github/workflows/: build_and_test.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
packaging/: dmg.json  installer.iss
packaging/resources/: README
resources/: Delay.h  irs.h
resources/customComponents/: ABComponent.hpp  ComboBox.hpp  DirSlider.h  FirstOrderDirectivityVisualizer.h  Footer.hpp  GroupComponent.hpp  ImgPaths.h  LevelMeter.h  Logo.hpp  MultiTextButton.h  MuteSoloButton.h  ReverseSlider.h  RotarySlider.hpp  RotarySliderGroup.hpp  SimpleLabel.h  TextButton.hpp  TitleBar.h  ToggleButton.hpp
resources/lookAndFeel/: AA_LaF.h  BinaryFonts.cpp  BinaryFonts.h  MainLookAndFeel.h
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/uiComponents/: OutputConfig.hpp
tests/: 00_ambicreator_all_formats_test.sh  Dummy.cpp
tests/DAW_tests/: Makefile  testplan.md
tests/Reaper/: 00_ambicreator_all_formats.RPP
